[package]
name = "leveldb-build-demo"
version = "0.1.0"
authors = ["Ana Hobden <operator@hoverbear.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leveldb = "*"
tempdir = "*"

[patch.crates-io]
leveldb-sys = { git = "https://github.com/jonas-schievink/leveldb-sys", branch = "musl-stdcxx" }
